--- a/mds/1、快速入门篇.md
+++ b/mds/1、快速入门篇.md
@@ -6,39 +6,185 @@
 
 如何理解ORM呢？我们使用的编程语言是面向对象编程语言，使用的数据库是关系型数据库。将面向对象的语言和面向关系型的数据库之间建立映射关系，这就是ORM。
 
-# Room的简单使用
-
-Room架构主要由Entity、Dao和Database这3部分组成，每个部分都有明确的职责。在使用之前我们先看下需要的依赖包：
+# 二、依赖环境配置
 
 ```groovy
 dependencies {
     def room_version = "2.4.3"
-
+    // room base lib 
     implementation "androidx.room:room-runtime:$room_version"
+    
+    // below choose one:
+    // to use java annotation processing tool(apt)
     annotationProcessor "androidx.room:room-compiler:$room_version"
-
     // To use Kotlin annotation processing tool (kapt)
     kapt "androidx.room:room-compiler:$room_version"
     // To use Kotlin Symbol Processing (KSP)
     ksp "androidx.room:room-compiler:$room_version"
 
+    // below optional:
     // optional - RxJava2 support for Room
     implementation "androidx.room:room-rxjava2:$room_version"
-
     // optional - RxJava3 support for Room
     implementation "androidx.room:room-rxjava3:$room_version"
-
     // optional - Guava support for Room, including Optional and ListenableFuture
     implementation "androidx.room:room-guava:$room_version"
-
     // optional - Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
-
     // optional - Paging 3 Integration
     implementation "androidx.room:room-paging:2.5.0-alpha02"
 }
 ```
+如上根据需要自行进行选择，这里就选择最新的KSP方式来搞个demo入门：
 
-###### 1、
+```groovy
+dependencies {
+    def room_version = "2.4.0"
+    //room
+    implementation "androidx.room:room-runtime:$room_version"
+    ksp "androidx.room:room-compiler:$room_version"
+}
+```
+首先是依赖引入很简单，但是这样做编译不通过，优点小坑，官方文档只告诉你依赖引入，却没告诉你还要引入KSP插件，就像使用KAPT一样需要引入
+KAPT插件。
 
-https://stackoverflow.com/questions/67535271/trying-to-use-room-in-an-android-library-but-method-ksp-kotlin-symbol-process
+setting.gradle
+
+```groovy
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+        // 指明插件下载地址
+        maven{ url 'https://dl.bintray.com/kotlin/kotlin-eap'}
+    }
+}
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        // 指明插件下载地址
+        maven{ url 'https://dl.bintray.com/kotlin/kotlin-eap'}
+    }
+}
+rootProject.name = "NoteRoom"
+include ':app'
+```
+
+project build.gradle
+
+```groovy
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+plugins {
+    id 'com.android.application' version '7.2.0' apply false
+    id 'com.android.library' version '7.2.0' apply false
+    // kotlin 插件
+    id 'org.jetbrains.kotlin.android' version '1.5.10' apply false
+    // 声明要使用插件版本号。注意这里有坑，ksp版本要与kotlin插件版本保持一致。
+    id 'com.google.devtools.ksp' version "1.5.10-1.0.0-beta01" apply false
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
+```
+app/build.gradle
+
+```groovy
+plugins {
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
+    //使用插件
+    id 'com.google.devtools.ksp'
+}
+
+dependencies {
+    def room_version = "2.4.0"
+    //room
+    implementation "androidx.room:room-runtime:$room_version"
+    ksp "androidx.room:room-compiler:$room_version"
+}
+```
+
+# 三、Room的简单使用
+
+Room架构主要由Entity、Dao和Database这3部分组成，每个部分都有明确的职责。
+
+###### 1、Entity
+
+定义实体类，每个实体类都会在数据库中有一张对应的表，并且表中的列是根据实体类中的字段自动生成的。
+
+```kotlin
+/**
+ * Create by SunnyDay /08/24 21:43:27
+ */
+@Entity
+data class User(val name: String, val sex: String, val age: Int) {
+    @PrimaryKey(autoGenerate = true)
+    var id = 0L
+}
+```
+
+- 使用@Entity标记此类是一个Entity
+- 添加了一个特殊id字段，自增并标记为主键。
+
+###### 2、Dao
+
+数据访问对象的意思。在这里对数据库的各项操作进行封装，在实际编程的时候，逻辑层就不需要和底层数据库打交道了，直接和Dao层进行交互即可。
+
+```kotlin
+/**
+ * Create by SunnyDay /08/24 21:49:56
+ */
+@Dao
+interface UserDao {
+    @Insert
+    fun insert(user: User): Long
+
+    @Update
+    fun updateUser(newUser: User)
+
+    @Query("select * from User")
+    fun queryAllUsers(): List<User>
+
+    @Delete
+    fun deleteAllUser(user: User)
+
+    /**
+     * 注意这里的:age 代表数据库查询结果对象的age
+     * */
+    @Query("select * from User where age > :age ")
+    fun queryUserOlderThan(age: Int): List<User>
+}
+```
+
+###### 3、 Database
+
+用于定义数据库中的关键信息，包括数据库的版本号、包含哪些实体类以及提供Dao层的访问实例。
+
+```kotlin
+/**
+ * Create by SunnyDay /08/24 21:55:26
+ */
+@Database(version = 1,entities = [User::class]) // 数据库版本、包含的表
+abstract class AppDataBase : RoomDatabase() {
+
+    abstract fun userDao(): UserDao // 提供User数据库的访问接口对象，如果有其他表也可以在这定义
+
+    companion object { // 注意数据库对象要进程内单例
+        private var instance: AppDataBase? = null
+
+        fun getDataBase(context: Context): AppDataBase {
+            instance?.let {
+                return it
+            }
+
+            return Room.databaseBuilder(context, AppDataBase::class.java,"app_database").build().apply { // apply 的用法
+                instance = this
+            }
+        }
+    }
+}
+```
