delete、update 采坑 md待整理

--- a/mds/1、快速入门篇.md
+++ b/mds/1、快速入门篇.md
@@ -39,14 +39,14 @@ dependencies {
 
 ```groovy
 dependencies {
-    def room_version = "2.4.0"
+    def room_version = "2.4.3"
     //room
     implementation "androidx.room:room-runtime:$room_version"
     ksp "androidx.room:room-compiler:$room_version"
 }
 ```
 首先是依赖引入很简单，但是这样做编译不通过，优点小坑，官方文档只告诉你依赖引入，却没告诉你还要引入KSP插件，就像使用KAPT一样需要引入
-KAPT插件。
+KAPT插件。而且再引入插件过程中碰到了很多坑。
 
 setting.gradle
 
@@ -77,11 +77,15 @@ project build.gradle
 
 ```groovy
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 plugins {
     id 'com.android.application' version '7.2.0' apply false
     id 'com.android.library' version '7.2.0' apply false
-    // kotlin 插件
-    id 'org.jetbrains.kotlin.android' version '1.5.10' apply false
+    // kotlin 版本插件可能会引发编译错误如下：
+    //java.lang.NoSuchMethodError: 'kotlin.sequences.Sequence com.google.devtools.ksp.processing.Resolver.getSymbolsWithAnnotation$default(com.google.devtools.ksp.processing.Resolver, java.lang.String, boolean, int, java.lang.Object)'
+    //Module was compiled with an incompatible version of Kotlin. The binary version of its metadata is 1.7.1, expected version is 1.5.1.
+    //Execution failed for task ':app:kspDebugKotlin'.
+    id 'org.jetbrains.kotlin.android' version '1.4.30' apply false
     // 声明要使用插件版本号。注意这里有坑，ksp版本要与kotlin插件版本保持一致。
     id 'com.google.devtools.ksp' version "1.5.10-1.0.0-beta01" apply false
 }
@@ -101,9 +105,13 @@ plugins {
 }
 
 dependencies {
-    def room_version = "2.4.0"
-    //room
-    implementation "androidx.room:room-runtime:$room_version"
+    def room_version = "2.4.0-alpha03"
+    /**
+     * 超级大坑：room 2.4.0开始支持ksp.
+     * https://developer.android.google.cn/jetpack/androidx/releases/room#2.4.0-alpha03
+     *
+     * 试了2.4.0以上好多版本都不行，最后试了这个可以通过。
+     * */
     ksp "androidx.room:room-compiler:$room_version"
 }
 ```
@@ -150,7 +158,7 @@ interface UserDao {
     fun queryAllUsers(): List<User>
 
     @Delete
-    fun deleteAllUser(user: User)
+    fun deleteUser(user: User)
 
     /**
      * 注意这里的:age 代表数据库查询结果对象的age
@@ -188,3 +196,36 @@ abstract class AppDataBase : RoomDatabase() {
     }
 }
 ```
+
+###### 4、show me result
+
+经过上述的代码编写，我们就可以创建并操作数据库了，接下来我们来很简单的三步来看下结果：
+
+```kotlin
+        thread {
+            // 1、创建数据库，并获取UserDao对象。
+            val userDao = AppDataBase.getDataBase(applicationContext).userDao()
+            //2、User表添加一行信息
+            val user = User("Tom","boy",18)
+            //Caused by: java.lang.IllegalStateException: 
+            // Cannot access database on the main thread 
+            // since it may potentially lock the UI for a long period of time.
+            userDao.insert(user) 
+            // 3、查询所有的元素
+            userDao.queryUsers().forEach {
+                Log.d(TAG,"userName:${it.name}")
+                Log.d(TAG,"userSex:${it.sex}")
+                Log.d(TAG,"userAge:${it.age}")
+            }
+        }
+
+//  log:
+//  D/EgActivity: userName:Tom
+//  D/EgActivity: userSex:boy
+//  D/EgActivity: userAge:18
+
+```
+很简单的三步，创建数据库 -> User表中添加一行元素 -> 查询User表的信息，不过需要留意下面几点
+
+- 数据库对象获取最好设计成单例模式，因为每个RoomDatabase实例的成本相当高，而您几乎不需要在单个进程中访问多个实例。
+- 数据库的操作需要放到线程中去，如上否则会出现运行时异常。
