--- a/mds/1、快速入门篇.md
+++ b/mds/1、快速入门篇.md
@@ -161,7 +161,9 @@ interface UserDao {
     fun deleteUser(user: User)
 
     /**
-     * 注意这里的:age 代表数据库查询结果对象的age
+     * 注意：
+     * age为数据库中列字段名，也即User表中定义的字段
+     * :age代表取值，取方法内传递来的参数。
      * */
     @Query("select * from User where age > :age ")
     fun queryUserOlderThan(age: Int): List<User>
@@ -175,6 +177,9 @@ interface UserDao {
 ```kotlin
 /**
  * Create by SunnyDay /08/24 21:55:26
+ * 该类必须带有 @Database 注解，该注解包含列出所有与数据库关联的数据实体的 entities 数组。
+ * 该类必须是一个抽象类，用于扩展 RoomDatabase。
+ * 对于与数据库关联的每个 DAO 类，数据库类必须定义一个具有零参数的抽象方法，并返回 DAO 类的实例。
  */
 @Database(version = 1,entities = [User::class]) // 数据库版本、包含的表
 abstract class AppDataBase : RoomDatabase() {
@@ -229,3 +234,13 @@ abstract class AppDataBase : RoomDatabase() {
 
 - 数据库对象获取最好设计成单例模式，因为每个RoomDatabase实例的成本相当高，而您几乎不需要在单个进程中访问多个实例。
 - 数据库的操作需要放到线程中去，如上否则会出现运行时异常。
+
+
+留个疑问--> 如上我们进行了简单的数据库创建、user表信息添加、添加后信息的查询最终通过log验证了操作成功。那么如果我们尝试进行如下操作呢？
+
+```kotlin
+  userDao.deleteUser(user)
+  userDao.updateUser(user.copy(name = "jerry", sex = "boy", age = 20))
+```
+你会发现每次delete或者update之后再次进行query时数据库的元素还是操作之前的元素，，，，留个坑吧。入门了[下节](2、CURD.md)再讨论。
+
